added the most risky trades

--- a/ForexEA.ipynb
+++ b/ForexEA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ForexEA.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOAc8otbCshIRJCgW1f6T50",
+      "authorship_tag": "ABX9TyPmsxkPcdC5nZwiEogFJNbr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,13 +31,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rQrY2jbyQvYM",
-        "outputId": "45f1ceb0-8909-47a3-ed8f-addb0099dd03"
+        "outputId": "dc484456-1890-4d8e-e13e-31e1679e94dd"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive', force_remount=True)"
       ],
-      "execution_count": 8,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -58,7 +58,7 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n"
       ],
-      "execution_count": 54,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -71,7 +71,7 @@
         "filePath = \"/content/gdrive/MyDrive/TradeHistory/2021/March/statmentMarch01.xlsx\"\n",
         "# path_excel= \"/content/gdrive/MyDrive/TradeHistory/2021/March/statmentMarch01.gsheet\""
       ],
-      "execution_count": 28,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -82,8 +82,169 @@
       "source": [
         "df = pd.read_excel(filePath)"
       ],
-      "execution_count": 30,
+      "execution_count": 6,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "id": "winz_o5w1oQn",
+        "outputId": "8c4c842c-7b91-4807-c40b-d997fe155d4e"
+      },
+      "source": [
+        "df.head()"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Ticket</th>\n",
+              "      <th>Open Time</th>\n",
+              "      <th>Type</th>\n",
+              "      <th>Size</th>\n",
+              "      <th>Item</th>\n",
+              "      <th>Price</th>\n",
+              "      <th>S / L</th>\n",
+              "      <th>T / P</th>\n",
+              "      <th>Close Time</th>\n",
+              "      <th>Price.1</th>\n",
+              "      <th>Commission</th>\n",
+              "      <th>Taxes</th>\n",
+              "      <th>Swap</th>\n",
+              "      <th>Profit</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>5049229</td>\n",
+              "      <td>2021.03.04 19:30:00</td>\n",
+              "      <td>buy</td>\n",
+              "      <td>0.01</td>\n",
+              "      <td>eurusd</td>\n",
+              "      <td>1.20169</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>2021.03.05 12:44:42</td>\n",
+              "      <td>1.19419</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>-0.03</td>\n",
+              "      <td>-5.43</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>5060533</td>\n",
+              "      <td>2021.03.04 19:45:07</td>\n",
+              "      <td>buy</td>\n",
+              "      <td>0.02</td>\n",
+              "      <td>xagusd</td>\n",
+              "      <td>25.75700</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>2021.03.08 01:03:43</td>\n",
+              "      <td>25.48600</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>-3.91</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>3912832</td>\n",
+              "      <td>2021.03.01 07:45:00</td>\n",
+              "      <td>sell</td>\n",
+              "      <td>0.01</td>\n",
+              "      <td>audnzd</td>\n",
+              "      <td>1.06579</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>2021.03.02 20:00:13</td>\n",
+              "      <td>1.07268</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>-0.01</td>\n",
+              "      <td>-3.58</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>5049136</td>\n",
+              "      <td>2021.03.04 19:30:00</td>\n",
+              "      <td>buy</td>\n",
+              "      <td>0.01</td>\n",
+              "      <td>xagusd</td>\n",
+              "      <td>25.95700</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>2021.03.08 01:03:43</td>\n",
+              "      <td>25.48500</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>-3.41</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>3882509</td>\n",
+              "      <td>2021.03.01 03:30:00</td>\n",
+              "      <td>buy</td>\n",
+              "      <td>0.01</td>\n",
+              "      <td>eurusd</td>\n",
+              "      <td>1.20902</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>2021.03.02 17:55:00</td>\n",
+              "      <td>1.20492</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>-0.03</td>\n",
+              "      <td>-2.94</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    Ticket            Open Time  Type  Size  ... Commission  Taxes  Swap  Profit\n",
+              "0  5049229  2021.03.04 19:30:00   buy  0.01  ...        0.0    0.0 -0.03   -5.43\n",
+              "1  5060533  2021.03.04 19:45:07   buy  0.02  ...        0.0    0.0  0.00   -3.91\n",
+              "2  3912832  2021.03.01 07:45:00  sell  0.01  ...        0.0    0.0 -0.01   -3.58\n",
+              "3  5049136  2021.03.04 19:30:00   buy  0.01  ...        0.0    0.0  0.00   -3.41\n",
+              "4  3882509  2021.03.01 03:30:00   buy  0.01  ...        0.0    0.0 -0.03   -2.94\n",
+              "\n",
+              "[5 rows x 14 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -92,7 +253,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ly9m1mNVl9FR",
-        "outputId": "3b92ece7-c29a-4066-d332-7189675cefd7"
+        "outputId": "5eae7775-db56-425d-a734-7e9280ac1a5a"
       },
       "source": [
         "# project the Total Profit/loss for the traded pairs \n",
@@ -101,7 +262,7 @@
         "\n",
         "print(summOfDistinct)"
       ],
-      "execution_count": 51,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -132,7 +293,7 @@
           "height": 265
         },
         "id": "KYxQF_qlmdBn",
-        "outputId": "d4da428f-9672-4dec-d206-5c4ecb944b64"
+        "outputId": "0b924aa6-e6a1-4285-df9f-1257755296bd"
       },
       "source": [
         "x = summOfDistinct.Item\n",
@@ -140,7 +301,7 @@
         "plt.bar(x, y)\n",
         "plt.show()"
       ],
-      "execution_count": 55,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -156,6 +317,123 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0pgKjKuo1EMR",
+        "outputId": "a022dbe6-0afa-49da-a5dd-dedd9cd914df"
+      },
+      "source": [
+        "# which pairs made the most loss\n",
+        "lossCount = df.query(\"Profit < 0\").groupby('Item')[\"Item\",\"Profit\"].sum().reset_index()"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:2: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
+            "  \n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 173
+        },
+        "id": "A3agXudT23Zx",
+        "outputId": "030e8bc4-fc18-4f4a-80d0-151e9a1e2033"
+      },
+      "source": [
+        "lossCount"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Item</th>\n",
+              "      <th>Profit</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>audnzd</td>\n",
+              "      <td>-4.20</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>eurnzd</td>\n",
+              "      <td>-22.55</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>eurusd</td>\n",
+              "      <td>-19.37</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>xagusd</td>\n",
+              "      <td>-23.95</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     Item  Profit\n",
+              "0  audnzd   -4.20\n",
+              "1  eurnzd  -22.55\n",
+              "2  eurusd  -19.37\n",
+              "3  xagusd  -23.95"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dbNQQW3927a9"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
