--- a/ForexEA.ipynb
+++ b/ForexEA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ForexEA.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPmsxkPcdC5nZwiEogFJNbr",
+      "authorship_tag": "ABX9TyORoXS0CVCUKffNN4YhgMS1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -427,7 +427,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dbNQQW3927a9"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dbNQQW3927a9",
+        "outputId": "f02e13cd-d218-4d62-9443-e7bc9384e80c"
+      },
+      "source": [
+        "totaltchekc = df.loc[(df['Item']== 'audnzd') & (df['Profit']< 0), \"Profit\"].sum()\n",
+        "print(totaltchekc)"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "-4.2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fcJH2IkC6-mR"
       },
       "source": [
         ""
