--- a/ForexEA.ipynb
+++ b/ForexEA.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "ForexEA.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyORoXS0CVCUKffNN4YhgMS1",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPu61B15pgNrS9R+vhW/yOK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,13 +32,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rQrY2jbyQvYM",
-        "outputId": "dc484456-1890-4d8e-e13e-31e1679e94dd"
+        "outputId": "752d1035-726a-4207-8806-7ed55341a437"
       },
       "source": [
+        "# Mount google drive to read the Excel sheet\n",
         "from google.colab import drive\n",
-        "drive.mount('/content/gdrive', force_remount=True)"
+        "drive.mount('/content/gdrive', force_remount=True)\n",
+        "\n",
+        "# File path in colab \n",
+        "filePath = \"/content/gdrive/MyDrive/TradeHistory/2021/March/statmentMarch01.xlsx\"\n",
+        "# path_excel= \"/content/gdrive/MyDrive/TradeHistory/2021/March/statmentMarch01.gsheet\""
       ],
-      "execution_count": 1,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -54,51 +60,33 @@
         "id": "34b_VonuWSBU"
       },
       "source": [
+        "# Import necessary Libs\n",
+        "\n",
         "import pandas as pd \n",
         "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n"
+        "import matplotlib.pyplot as plt\n",
+        "import warnings\n",
+        "warnings.filterwarnings(\"ignore\")"
       ],
-      "execution_count": 4,
+      "execution_count": 55,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ex_mRlhJWKcY"
-      },
-      "source": [
-        "# File path in colab \n",
-        "filePath = \"/content/gdrive/MyDrive/TradeHistory/2021/March/statmentMarch01.xlsx\"\n",
-        "# path_excel= \"/content/gdrive/MyDrive/TradeHistory/2021/March/statmentMarch01.gsheet\""
-      ],
-      "execution_count": 5,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "impS39NrWPk2"
-      },
-      "source": [
-        "df = pd.read_excel(filePath)"
-      ],
-      "execution_count": 6,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
+        "id": "impS39NrWPk2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "id": "winz_o5w1oQn",
-        "outputId": "8c4c842c-7b91-4807-c40b-d997fe155d4e"
+        "outputId": "632ca78d-367a-4e08-bfc4-717f2cb1b4cf"
       },
       "source": [
+        "# Read the file\n",
+        "df = pd.read_excel(filePath)\n",
         "df.head()"
       ],
-      "execution_count": 9,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -242,7 +230,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 41
         }
       ]
     },
@@ -253,16 +241,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ly9m1mNVl9FR",
-        "outputId": "5eae7775-db56-425d-a734-7e9280ac1a5a"
+        "outputId": "394b2674-3c26-4b9f-8ed6-c6caa95ce8e3"
       },
       "source": [
         "# project the Total Profit/loss for the traded pairs \n",
         "\n",
-        "summOfDistinct = df.groupby([\"Item\"])[\"Item\",\"Profit\"].sum().reset_index()\n",
+        "totalProfitByCurrency = df.groupby([\"Item\"])[\"Item\",\"Profit\"].sum().reset_index()\n",
         "\n",
         "print(summOfDistinct)"
       ],
-      "execution_count": 7,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
@@ -274,14 +262,6 @@
             "3  xagusd   59.25\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:3: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
-            "  This is separate from the ipykernel package so we can avoid doing imports until\n"
-          ],
-          "name": "stderr"
         }
       ]
     },
@@ -293,7 +273,7 @@
           "height": 265
         },
         "id": "KYxQF_qlmdBn",
-        "outputId": "0b924aa6-e6a1-4285-df9f-1257755296bd"
+        "outputId": "08dac3be-5eda-4e20-a377-ac102a1602d0"
       },
       "source": [
         "x = summOfDistinct.Item\n",
@@ -301,7 +281,7 @@
         "plt.bar(x, y)\n",
         "plt.show()"
       ],
-      "execution_count": 8,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "display_data",
@@ -325,102 +305,42 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0pgKjKuo1EMR",
-        "outputId": "a022dbe6-0afa-49da-a5dd-dedd9cd914df"
+        "outputId": "fa9f313f-6b62-44bd-b7ea-ee3b4fbc7d3d"
       },
       "source": [
         "# which pairs made the most loss\n",
-        "lossCount = df.query(\"Profit < 0\").groupby('Item')[\"Item\",\"Profit\"].sum().reset_index()"
+        "allNegativeClosedTrades = df.query(\"Profit < 0\").groupby('Item')[\"Item\",\"Profit\"].sum().reset_index()\n",
+        "allPositiveClosedTrades = df.query(\"Profit > 0\").groupby('Item')[\"Item\",\"Profit\"].sum().reset_index()\n",
+        "\n",
+        "print(f\"Closed Negative: \\n{allNegativeClosedTrades}\\n \\n Closed Positive: \\n{allPositiveClosedTrades} \\n \\n Total Profit/Loss: \\n{totalProfitByCurrency}\")"
       ],
-      "execution_count": 11,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:2: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
-            "  \n"
+            "Closed Negative: \n",
+            "     Item  Profit\n",
+            "0  audnzd   -4.20\n",
+            "1  eurnzd  -22.55\n",
+            "2  eurusd  -19.37\n",
+            "3  xagusd  -23.95\n",
+            " \n",
+            " Closed Positive: \n",
+            "     Item  Profit\n",
+            "0  audnzd   18.60\n",
+            "1  eurnzd  116.82\n",
+            "2  eurusd   68.57\n",
+            "3  xagusd   83.20 \n",
+            " \n",
+            " Total Profit/Loss: \n",
+            "     Item  Profit\n",
+            "0  audnzd   14.40\n",
+            "1  eurnzd   94.27\n",
+            "2  eurusd   49.20\n",
+            "3  xagusd   59.25\n"
           ],
-          "name": "stderr"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 173
-        },
-        "id": "A3agXudT23Zx",
-        "outputId": "030e8bc4-fc18-4f4a-80d0-151e9a1e2033"
-      },
-      "source": [
-        "lossCount"
-      ],
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Item</th>\n",
-              "      <th>Profit</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>audnzd</td>\n",
-              "      <td>-4.20</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>eurnzd</td>\n",
-              "      <td>-22.55</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>eurusd</td>\n",
-              "      <td>-19.37</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>xagusd</td>\n",
-              "      <td>-23.95</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "     Item  Profit\n",
-              "0  audnzd   -4.20\n",
-              "1  eurnzd  -22.55\n",
-              "2  eurusd  -19.37\n",
-              "3  xagusd  -23.95"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 12
+          "name": "stdout"
         }
       ]
     },
@@ -431,13 +351,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dbNQQW3927a9",
-        "outputId": "f02e13cd-d218-4d62-9443-e7bc9384e80c"
+        "outputId": "eadd9fbb-8638-4280-ead0-e1ec4f8c62ae"
       },
       "source": [
         "totaltchekc = df.loc[(df['Item']== 'audnzd') & (df['Profit']< 0), \"Profit\"].sum()\n",
         "print(totaltchekc)"
       ],
-      "execution_count": 34,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
