--- a/ForexEA.ipynb
+++ b/ForexEA.ipynb
@@ -6,7 +6,7 @@
       "name": "ForexEA.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPu61B15pgNrS9R+vhW/yOK",
+      "authorship_tag": "ABX9TyN7QD+4kn3O7CoyZ8eabnBk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rQrY2jbyQvYM",
-        "outputId": "752d1035-726a-4207-8806-7ed55341a437"
+        "outputId": "95355b33-8435-4ec6-f522-b7567920eca7"
       },
       "source": [
         "# Mount google drive to read the Excel sheet\n",
@@ -43,7 +43,7 @@
         "filePath = \"/content/gdrive/MyDrive/TradeHistory/2021/March/statmentMarch01.xlsx\"\n",
         "# path_excel= \"/content/gdrive/MyDrive/TradeHistory/2021/March/statmentMarch01.gsheet\""
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -66,9 +66,11 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import warnings\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
         "warnings.filterwarnings(\"ignore\")"
       ],
-      "execution_count": 55,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -77,160 +79,27 @@
         "id": "impS39NrWPk2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 198
         },
-        "outputId": "632ca78d-367a-4e08-bfc4-717f2cb1b4cf"
+        "outputId": "3217bf85-d9a5-4c63-c3d1-0389b5c685fc"
       },
       "source": [
         "# Read the file\n",
         "df = pd.read_excel(filePath)\n",
-        "df.head()"
+        "df.tail(10)"
       ],
-      "execution_count": 41,
+      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Ticket</th>\n",
-              "      <th>Open Time</th>\n",
-              "      <th>Type</th>\n",
-              "      <th>Size</th>\n",
-              "      <th>Item</th>\n",
-              "      <th>Price</th>\n",
-              "      <th>S / L</th>\n",
-              "      <th>T / P</th>\n",
-              "      <th>Close Time</th>\n",
-              "      <th>Price.1</th>\n",
-              "      <th>Commission</th>\n",
-              "      <th>Taxes</th>\n",
-              "      <th>Swap</th>\n",
-              "      <th>Profit</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>5049229</td>\n",
-              "      <td>2021.03.04 19:30:00</td>\n",
-              "      <td>buy</td>\n",
-              "      <td>0.01</td>\n",
-              "      <td>eurusd</td>\n",
-              "      <td>1.20169</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>2021.03.05 12:44:42</td>\n",
-              "      <td>1.19419</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>-0.03</td>\n",
-              "      <td>-5.43</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>5060533</td>\n",
-              "      <td>2021.03.04 19:45:07</td>\n",
-              "      <td>buy</td>\n",
-              "      <td>0.02</td>\n",
-              "      <td>xagusd</td>\n",
-              "      <td>25.75700</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>2021.03.08 01:03:43</td>\n",
-              "      <td>25.48600</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.00</td>\n",
-              "      <td>-3.91</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>3912832</td>\n",
-              "      <td>2021.03.01 07:45:00</td>\n",
-              "      <td>sell</td>\n",
-              "      <td>0.01</td>\n",
-              "      <td>audnzd</td>\n",
-              "      <td>1.06579</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>2021.03.02 20:00:13</td>\n",
-              "      <td>1.07268</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>-0.01</td>\n",
-              "      <td>-3.58</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>5049136</td>\n",
-              "      <td>2021.03.04 19:30:00</td>\n",
-              "      <td>buy</td>\n",
-              "      <td>0.01</td>\n",
-              "      <td>xagusd</td>\n",
-              "      <td>25.95700</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>2021.03.08 01:03:43</td>\n",
-              "      <td>25.48500</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.00</td>\n",
-              "      <td>-3.41</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>3882509</td>\n",
-              "      <td>2021.03.01 03:30:00</td>\n",
-              "      <td>buy</td>\n",
-              "      <td>0.01</td>\n",
-              "      <td>eurusd</td>\n",
-              "      <td>1.20902</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>2021.03.02 17:55:00</td>\n",
-              "      <td>1.20492</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>-0.03</td>\n",
-              "      <td>-2.94</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "    Ticket            Open Time  Type  Size  ... Commission  Taxes  Swap  Profit\n",
-              "0  5049229  2021.03.04 19:30:00   buy  0.01  ...        0.0    0.0 -0.03   -5.43\n",
-              "1  5060533  2021.03.04 19:45:07   buy  0.02  ...        0.0    0.0  0.00   -3.91\n",
-              "2  3912832  2021.03.01 07:45:00  sell  0.01  ...        0.0    0.0 -0.01   -3.58\n",
-              "3  5049136  2021.03.04 19:30:00   buy  0.01  ...        0.0    0.0  0.00   -3.41\n",
-              "4  3882509  2021.03.01 03:30:00   buy  0.01  ...        0.0    0.0 -0.03   -2.94\n",
-              "\n",
-              "[5 rows x 14 columns]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 41
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-3-0efa95f24cc5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Read the file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_excel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilePath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtail\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'filePath' is not defined"
+          ]
         }
       ]
     },
@@ -250,7 +119,7 @@
         "\n",
         "print(summOfDistinct)"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,7 +150,7 @@
         "plt.bar(x, y)\n",
         "plt.show()"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -314,7 +183,7 @@
         "\n",
         "print(f\"Closed Negative: \\n{allNegativeClosedTrades}\\n \\n Closed Positive: \\n{allPositiveClosedTrades} \\n \\n Total Profit/Loss: \\n{totalProfitByCurrency}\")"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -357,7 +226,7 @@
         "totaltchekc = df.loc[(df['Item']== 'audnzd') & (df['Profit']< 0), \"Profit\"].sum()\n",
         "print(totaltchekc)"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
